--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,4 +1,4 @@
-html,
+/* html,
 body {
     height: 100%;
     margin: 0;
@@ -18,4 +18,4 @@ main {
     background-color: #f8f9fa;
     padding: 20px 0;
     text-align: center;
-}
+} */
